# zkAuthX-ETHOnline2024

./: README.md
frontend/: package.json
frontend/src/pages/Login/: Login.js
frontend/src/pages/Registration/: Registration.js
micro-rollup/: genesis-state.json  package.json  stackr.config.ts
micro-rollup/src/: index.ts
micro-rollup/src/stackr/: actions.ts  machine.ts  state.ts  transitions.ts  tree.ts  types.ts
zk-circuit/: Cargo.toml
zk-circuit/src/: main.rs  zk.rs
zk-wasm/: Cargo.toml  index.html
zk-wasm/src/: lib.rs
