[package]
name = "zk-wasm"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[dependencies]
plonky2 = {path="../plonky2/plonky2"}
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.93"
wasm-bindgen-test = "0.3.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
overflow-checks = true
panic = "unwind"
